--- a/src/css/main.css
+++ b/src/css/main.css
@@ -7,44 +7,14 @@
 
 body {
   font-family: 'Open Sans';
-  margin: 0;
-  padding: 0;
-  perspective: 1px;
-  transform-style: preserve-3d;
-  overflow-y: scroll;
-  overflow-x: hidden;
-}
-
-html {
-  overflow: hidden;
-  height: 100%;
 }
 
 header {
   background-repeat: no-repeat;
   padding: 0px 0px 50px 0px;
-  box-sizing: border-box;
-  min-height: 100vh;
-  transform-style: inherit;
-  width: 100vw;
-}
-
-header::before {
-  content: '';
-  display: block;
-  position: absolute;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  top: 0;
-  z-index: -1;
-  transform-origin: center;
-  min-height: 100vh;
-  background-image: url(/src/img/header/bg-image.png);
+  background-image: url(../img/header/bg-image.png);
   background-repeat: no-repeat;
-  background-size: cover;
-  transition: 1s;
-  transform: translateZ(-1px) scale(2.1);
+  background-size: 100% 100%;
 }
 
 .header__logo {
@@ -55,7 +25,7 @@ header::before {
   margin-left: auto;
   margin-right: auto;
   width: 50em;
-  margin-bottom: 335px;
+  margin-bottom: 345px;
 }
 
 .header__text {
@@ -126,7 +96,10 @@ header::before {
   margin-left: auto;
   margin-right: auto;
   padding-bottom: 60px;
-  margin-bottom: 60px;
+}
+
+.end-block {
+  margin-bottom: 100px;
 }
 
 .end-block__link {
@@ -209,5 +182,105 @@ header::before {
 
 .lang__item-active {
   color: #FFB548;
+}
+
+.about {
+  background-image: url(../img/about/bg-about.png);
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  color: #ffffff;
+  padding: 150px 0px 0px 0px;
+  display: flex;
+  min-width: 0;
+}
+
+.about__descr {
+  display: inline-block;
+  margin: 0px 20px 0px 250px;
+}
+
+.about-paragraph__first {
+  margin: 0px 0px 20px 0px;
+}
+
+.about-text__title {
+  text-transform: uppercase;
+  font-family: 'Bebas Neue';
+  font-size: 80px;
+  margin: 0px 0px 9px 0px;
+}
+
+.about-text__question {
+  letter-spacing: 3px;
+  text-transform: uppercase;
+  font-family: 'Bebas Neue';
+  font-weight: lighter;
+  font-size: 25px;
+}
+
+.about-text__line {
+  height: 2px;
+  width: 660px;
+  margin: 0px 0px 50px 0px;
+  border-color: #ffffff;
+  border-radius: 2px;
+  background-color: #ffffff;
+}
+
+.about-text__paragraph {
+  margin: 0px 0px 0px 263px;
+  text-align: justify;
+  line-height: 1.3;
+  font-size: 18px;
+  max-width: 400px;
+}
+
+.about-text__underline {
+  display: inline-block;
+  line-height: 0.7;
+  padding: 0;
+  border-bottom: 3px solid #ffb548;
+}
+
+.about-text__underline__wrapper {
+  min-width: 0;
+}
+
+.swiper-container {
+  margin: 0px 250px 0px 0px;
+  min-width: 0;
+  text-align: center;
+}
+
+.image-slider {
+  max-width: 550px;
+}
+
+.image-slider__image img {
+  max-width: 460px;
+  max-height: 520px;
+}
+
+.image-slider .swiper-button-next::after {
+  display: none;
+  opacity: 0;
+}
+
+.image-slider .swiper-pagination-bullet-active {
+  background-color: #fff;
+  background-image: url(../img/about/bullet-active.svg);
+  width: 13px;
+  height: 13px;
+}
+
+.image-slider .swiper-pagination-bullet {
+  width: 15.4px;
+  height: 15.6px;
+  background-image: url(../img/about/bullet.svg);
+  opacity: 1;
+}
+
+.image-slider .swiper-pagination-bullet:not(:last-child) {
+  margin: 0px 52px 0px 0px;
 }
 /*# sourceMappingURL=main.css.map */
